--- a/caravan/index.html
+++ b/caravan/index.html
@@ -14,17 +14,19 @@
            CARAVAN
         </a>
         </h1>
-
-        <nav>
-          <ul class="nav-list">
-            <li class="nav-list-item">
-              <a href="index.html">Home</a>
-            </li>
-            <li class="nav-list-item">About</li>
-            <li class="nav-list-item">Topic</li>
-          </ul>
-        </nav>
+        
+        <div class="social"></div>
     </header>
+    
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-list-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="nav-list-item">About</li>
+        <li class="nav-list-item">Topic</li>
+      </ul>
+    </nav>
 
     <div class="main-visual">
       <div class="main-visual-content">
