--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=" />
     <script src="https://kit.fontawesome.com/15c4cfeeb2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <title>CARAVAN</title>
