--- a/caravan/index.html
+++ b/caravan/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale="/>
     <script src="https://kit.fontawesome.com/15c4cfeeb2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <title>CARAVAN</title>
   </head>
 
@@ -15,7 +15,6 @@
            CARAVAN
         </a>
         </h1>
-        
         <div class="social">
           <i class="fab fa-facebook-square"></i>
           <i class="fab fa-twitter-square"></i>
@@ -36,8 +35,8 @@
     <div class="main-visual">
       <div class="main-visual-content">
         <p class="main-visual-text">
-          The world is a book<br />
-          and those who do not travel<br />
+          The world is a book<br>
+          and those who do not travel<br>
           read only one page.
         </p>
         <p class="main-visual-name">
