--- a/演習問題/flex.html
+++ b/演習問題/flex.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="演習問題/flex.css" />
+    <link rel="stylesheet" href="flex.css" />
     <title>flexbox</title>
   </head>
   <body>
