--- a/演習問題/1-6.html
+++ b/演習問題/1-6.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="1-6.css" type="text/css" />
     <title>演習問題</title>
   </head>
-  
+
   <body>
     <div class="main-visual">
-      <div class="main-visual-content">
-        
-      </div>
+      <div class="main-visual-box1"></div>
+      <div class="main-visual-box2"></div>
+      <div class="main-visual-box3"></div>
+      <div class="main-visual-box4"></div>
     </div>
   </body>
 </html>
